# SDL3-Project-Template

./: CMakeLists.txt  README.md
def/: functions.cpp
headers/: private_functions.hpp  processes.hpp  public_functions.hpp
src/: main.cpp  processes.cpp
